--- a/templates/about.html
+++ b/templates/about.html
@@ -53,7 +53,7 @@
 	<div class="col-md-12 col-lg-6">
 		<h2>About</h2>
 		<br>
-		<p>Mauris sollicitudin ante in scelerisque commodo. Fusce scelerisque ullamcorper nunc, sit amet vulputate dolor iaculis vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin bibendum diam a tincidunt volutpat. Fusce pulvinar velit erat, id euismod est mollis nec. Curabitur ultrices tortor nisi. Sed feugiat massa gravida aliquet suscipit. In luctus tellus magna, eu pellentesque urna ultrices non. Vestibulum sagittis metus arcu, et sollicitudin metus tincidunt fringilla. Etiam tincidunt quam ac placerat malesuada. Praesent vel arcu erat. Nulla at felis libero. Ut odio felis, feugiat in leo ac, consectetur ullamcorper nisl. Praesent tempor posuere bibendum. Cras nisi tellus, imperdiet eu molestie vel, dictum a erat. Fusce sodales ultricies eleifend.</p>
+		<p>Greetings! We are Jack, Jimmy, Narisara and Sam, and together we form to make </p>
 		<p>Our website is about the abundance of plankton over time across the coast of Australia.
 			Phytoplankton or “plant drifter” is a catch-all category for all the tiny aquatic organisms that can turn sunlight into food via photosynthesis.
 			While zooplankton or “animal drifter” are also an important part to the ocean ecosystem as they feed on phytoplankton then become a food source for larger predators such as fish.
